src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>C501_IS_Age_Entry_Date__c</fullName>
        <description>Store this date so you can increment ages automatically even when you have no actual birthdate.</description>
        <label>Age Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_IS_Age_Group__c</fullName>
        <description>You can set this field manually, but if you enter age or birthdate a trigger fills this field automatically (and overrides your setting).</description>
        <inlineHelpText>You can set this field manually, but if you enter age or birthdate a trigger fills this field automatically (and overrides your setting).</inlineHelpText>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Infant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_IS_Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_IS_Commodity_Usage_JSON__c</fullName>
        <description>JSON data that records the total usage of commodities in the month of the most recent visit.</description>
        <inlineHelpText>JSON data that records the total usage of commodities in the month of the most recent visit.</inlineHelpText>
        <label>Commodity Usage JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C501_IS_External_Created_Date__c</fullName>
        <description>Store the date the external entry was created.</description>
        <label>External Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_IS_External_Household_Id__c</fullName>
        <label>External Household Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_IS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_IS_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_IS_Id_Number__c</fullName>
        <description>Created by 501 Commons</description>
        <label>ID Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_IS_Id_Type__c</fullName>
        <label>ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Drivers License</fullName>
                </value>
                <value>
                    <fullName>WA ID</fullName>
                </value>
                <value>
                    <fullName>DSHS Card</fullName>
                </value>
                <value>
                    <fullName>Utility Bill</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Voters Registration</fullName>
                </value>
                <value>
                    <fullName>Medical Coupon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_IS_Proof_of_Infant__c</fullName>
        <label>Proof of Infant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>